--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -30,10 +30,10 @@
 				</ul>
 				<div>
 					<label>Novo:</label>
-					<div class="d-flex">
+					<form class="d-flex" @submit="handleSubmit">
 						<input class="form-control mx-1" v-model="newTask"/>
-						<button @click="addTask" class="btn btn-primary" type="button">+</button>
-					</div>
+						<button class="btn btn-primary" type="submit">+</button>
+					</form>
 				</div>
 			</div>
 		</div>
@@ -86,6 +86,11 @@
 					}).then(resp => {
 						this.getTasks();
 					})
+				},
+				
+				handleSubmit: function(e) {
+					e.preventDefault();
+					this.addTask();
 				},
 				
 				addTask: function(e) {
